--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "mix",
+    "watch": "mix watch",
+    "hot": "mix watch --hot",
+    "prod": "mix --production"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.5.13",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
-        "vite": "^6.0.11"
+        "vite": "^6.0.11",
+        "vue": "^3.5.13",
+        "vue-loader": "^17.4.2",
+        "webpack-cli": "^6.0.1"
     }
 }
