--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
-    "private": true,
-    "type": "module",
+    "name": "1k3Store",
+    "version": "1.0.0",
+    "type": "commonjs",
     "scripts": {
-        "dev": "mix",
-    "watch": "mix watch",
-    "hot": "mix watch --hot",
-    "prod": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
+    },
+    "dependencies": {
+        "vue": "^3.0.0"
     },
     "devDependencies": {
-        "@vue/compiler-sfc": "^3.5.13",
-        "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "laravel-mix": "^6.0.49",
-        "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
-        "vite": "^6.0.11",
-        "vue": "^3.5.13",
-        "vue-loader": "^17.4.2",
-        "webpack-cli": "^6.0.1"
+        "@vitejs/plugin-vue": "^1.10.2",
+        "laravel-vite-plugin": "^0.1.0",
+        "vite": "^2.0.0"
     }
 }
