--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-    "name": "1k3Store",
-    "version": "1.0.0",
-    "type": "commonjs",
+    "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "dependencies": {
-        "vue": "^3.0.0"
+        "build": "vite build",
+        "dev": "vite"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^1.10.2",
-        "laravel-vite-plugin": "^0.1.0",
-        "vite": "^2.0.0"
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^5.2.1",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.4",
+        "bootstrap": "^5.2.3",
+        "concurrently": "^9.0.1",
+        "laravel-vite-plugin": "^1.2.0",
+        "postcss": "^8.5.2",
+        "sass": "^1.56.1",
+        "tailwindcss": "^3.4.17",
+        "vite": "^6.0.11",
+        "vite-svg-loader": "^5.1.0",
+        "vue": "^3.2.37"
     }
 }
