--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^5.2.1",
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.9.0",
         "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
@@ -19,5 +19,8 @@
         "vite": "^6.0.11",
         "vite-svg-loader": "^5.1.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "js-cookie": "^3.0.5"
     }
 }
