--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "js-cookie": "^3.0.5"
+        "js-cookie": "^3.0.5",
+        "notyf": "^3.10.0",
+        "toastify-js": "^1.12.0"
     }
 }
