--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@formkit/auto-animate": "^0.8.2",
         "js-cookie": "^3.0.5",
         "notyf": "^3.10.0",
         "toastify-js": "^1.12.0"
