--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "embla-carousel-wheel-gestures": "^8.0.2",
         "js-cookie": "^3.0.5",
         "notyf": "^3.10.0",
-        "toastify-js": "^1.12.0"
+        "pinia": "^3.0.3",
+        "toastify-js": "^1.12.0",
+        "vue-router": "^4.5.1"
     }
 }
